# Klifford

./: .gitignore  CMakeLists.txt  README.md
src/: Board.cpp  CMakeLists.txt  Card.cpp  main.cpp
src/include/: Board.h  Card.h  Deck.h  Player.h
src/src/: Board.cpp  Card.cpp  Deck.cpp  Player.cpp  main.cpp
test/: CMakeLists.txt  boardTests.cpp  cardTests.cpp  deckTests.cpp  playerTests.cpp  test_card.cpp
tst/: CMakeLists.txt
