set(PROJECT_NAME_TEST ${CMAKE_PROJECT_NAME}_TEST)

file(GLOB_RECURSE SOURCES LIST_DIRECTORIES true *.cpp)
set(SOURCES ${SOURCES})


add_executable(${PROJECT_NAME_TEST} ${SOURCES})

target_link_libraries(${PROJECT_NAME_TEST} PUBLIC
	gtest_main
	${CMAKE_PROJECT_NAME}
)

add_test (NAME ${PROJECT_NAME_TEST} COMMAND ${PROJECT_NAME_TEST})